# proeval

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: README.md  gqa_predictions.csv
experiment/: README.md  __init__.py  aggregate_results.py  exp_failure_discovery.py  exp_performance_estimation.py  exp_run_all_groups.py  exp_train_encoder.py  helper.py
proeval/: README.md  __init__.py
proeval/encoder/: nn_utils.py
proeval/evaluator/: __init__.py  client.py
proeval/generator/: __init__.py  core.py
proeval/sampler/: __init__.py  bq.py  data.py  pretrain_selector.py
proeval/utils/: __init__.py  metrics.py
src/proeval/: README.md  __init__.py
src/proeval/encoder/: __init__.py  data.py  trainer.py
src/proeval/evaluator/: __init__.py  csv_manager.py  predictor.py
src/proeval/generator/: __init__.py  baselines.py  core.py  prompt.py
src/proeval/sampler/: __init__.py  baselines.py  bq.py  pretrain_selector.py
src/proeval/utils/: __init__.py  model_names.py
utils/: __init__.py  experiment_plotting.py  fix_all_errors.py  plotting.py
