[project]
name = "ProEval"
version = "0.1.0"
description = "Deepmind's efficient evaluation tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
    "requests>=2.31.0",
    "tqdm>=4.65.0",
    "bertopic>=0.16.0",
    "hdbscan>=0.8.33"
]
